skaffold/mern/k8s/core-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: core
          imagePullPolicy: IfNotPresent  # use local image, never pull
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
